--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <h1>Phelipe Ricardo Copanski</h1>
-<img scr="">    
+<img scr="foto-phelipe.jpg"> <width="300px"</width>
 </body>
 </html>
