--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 </head>
 <body>
 <h1>Phelipe Ricardo Copanski</h1>
-<img scr="foto-phelipe.jpg"> <width="300px"</width>
+
+<a href="#habilidades">Lista de habilidades</a><br><br><br>
+<a href="#artigo">Artigo interessante</a>
+<br><br><br>
+<img src="foto-phelipe.jpg" alt="Phelipe em urubici" width="150px"id="foto">
+<p>Sou estudante desenvolvimento web, moro em <strong>Joinville Santa Catarina.</strong> </p>
+<h2 id="habilidades">Lista de habilidades</h2>
+<ul>
+    <li><strong>Paciência</strong></li>
+    <li>Dedicação</li>
+    <li>Perseverança</li>
+</ul>
+<a href="#foto">Minha foto</a><br>
+<a id="artigo" href="https://www.oficinadanet.com.br/post/13484-qual-a-melhor-linguagem-de-programacao" target="_blank">Artigo programação</a>
 </body>
 </html>
