fanalizando atividade portifolio

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <a href="#artigo">Artigo interessante</a>
 <br><br><br>
 <img src="foto-phelipe.jpg" alt="Phelipe em urubici" width="150px"id="foto">
-<p>Sou estudante desenvolvimento web, moro em <strong>Joinville Santa Catarina.</strong> </p>
+<p>Sou estudante desenvolvimento web, moro em <strong>Joinville Santa Catarina.</strong><br>
+<em>“Medir o progresso da programação por linhas de código é como medir o progresso da construção de aeronaves em termos de peso.” - Bill Gates</em>
+</p>
 <h2 id="habilidades">Lista de habilidades</h2>
 <ul>
     <li><strong>Paciência</strong></li>
