definindo cor background

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         p {
             font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
+        body {
+            background-color: #32CBFF;
+        }
     </style>
 </head>
 <body>
