alterando tags e mudando tamanho de fontes lita habilidades

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,31 +10,55 @@
         h1 {
             font-family: Arial, Helvetica, sans-serif;
         }
+
         p {
             font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
+
         body {
             background-color: #32CBFF;
         }
+        em {
+            color: rgb(6, 6, 195);
+        }
+        .paciencia {
+            font-size: 30px;
+        }
+        .dedicacao {
+            font-size: 20px;
+        }
+        .perseveranca {
+            font-size: 15px;
+        }
     </style>
 </head>
-<body>
-<h1>Phelipe Ricardo Copanski</h1>
 
-<a href="#habilidades">Lista de habilidades</a><br><br><br>
-<a href="#artigo">Artigo interessante</a>
-<br><br><br>
-<img src="foto-phelipe.jpg" alt="Phelipe em urubici" width="150px"id="foto">
-<p>Sou estudante desenvolvimento web, moro em <strong>Joinville Santa Catarina.</strong><br>
-<em>“Medir o progresso da programação por linhas de código é como medir o progresso da construção de aeronaves em termos de peso.” - Bill Gates</em>
-</p>
-<h2 id="habilidades">Lista de habilidades</h2>
-<ul>
-    <li><strong>Paciência</strong></li>
-    <li>Dedicação</li>
-    <li>Perseverança</li>
-</ul>
-<a href="#foto">Minha foto</a><br>
-<a id="artigo" href="https://www.oficinadanet.com.br/post/13484-qual-a-melhor-linguagem-de-programacao" target="_blank">Artigo programação</a>
+<body>
+    <h1>Phelipe Ricardo Copanski</h1>
+
+    <a href="#habilidades">Lista de habilidades</a><br><br><br>
+    <a href="#artigo">Artigo interessante</a>
+    <br><br><br>
+    <img src="foto-phelipe.jpg" alt="Phelipe em urubici" width="150px" id="foto">
+    <p>Sou técnico de manutenção de smartphones á 10 anos e sou apaixonado por técnologia. Atualmente estudante de
+        desenvolvimento Web.<br><br>
+
+        <em>“Medir o progresso da programação por linhas de código é como medir o progresso da construção de aeronaves
+            em termos de peso.” - Bill Gates</em>
+    </p>
+
+    <p><strong>Joinville Santa Catarina.</strong></p><br>
+
+
+    <h2 id="habilidades">Lista de habilidades</h2>
+    <ul>
+        <li class="paciencia"><strong>Paciência</strong></li>
+        <li class="dedicacao">Dedicação</li>
+        <li class="perseveranca">Perseverança</li>
+    </ul>
+    <a href="#foto">Minha foto</a><br>
+    <a id="artigo" href="https://www.oficinadanet.com.br/post/13484-qual-a-melhor-linguagem-de-programacao"
+        target="_blank">Artigo programação</a>
 </body>
+
 </html>
