--- a/index.html
+++ b/index.html
@@ -6,31 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio Web</title>
-    <style>
-        h1 {
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        p {
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-
-        body {
-            background-color: #32CBFF;
-        }
-        em {
-            color: rgb(6, 6, 195);
-        }
-        .paciencia {
-            font-size: 30px;
-        }
-        .dedicacao {
-            font-size: 20px;
-        }
-        .perseveranca {
-            font-size: 15px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
