--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
 </head>
 
 <body>
-    <h1>Phelipe Ricardo Copanski</h1>
-
-    <a href="#habilidades">Lista de habilidades</a><br><br><br>
+    <a href="#foto">Minha foto</a><br>
+    <a id="artigo" href="https://www.oficinadanet.com.br/post/13484-qual-a-melhor-linguagem-de-programacao"
+        target="_blank">Artigo programação</a><br>
+    <a href="#habilidades">Lista de habilidades</a><br>
     <a href="#artigo">Artigo interessante</a>
-    <br><br><br>
-    <img src="foto-phelipe.jpg" alt="Phelipe em urubici" width="150px" id="foto">
-    <p>Sou técnico de manutenção de smartphones á 10 anos e sou apaixonado por técnologia. Atualmente estudante de
-        desenvolvimento Web.<br><br>
 
-        <em>“Medir o progresso da programação por linhas de código é como medir o progresso da construção de aeronaves
-            em termos de peso.” - Bill Gates</em>
-    </p>
+    <div>
+        <h1>Phelipe Ricardo Copanski</h1>
+        <img src="foto-phelipe.jpg" alt="Phelipe em urubici" width="150px" id="foto">
+        <p>Sou técnico de manutenção de smartphones á 10 anos e sou apaixonado por técnologia. Atualmente estudante de
+            desenvolvimento Web.<br><br>
+        <em>“Medir o progresso da programação por linhas de código é como medir o progresso da construção de
+        aeronaves em termos de peso.” - Bill Gates</em>
+        </p>
 
-    <p><strong>Joinville Santa Catarina.</strong></p><br>
+        <p><strong>Joinville Santa Catarina.</strong></p><br>
 
-
+    </div>
     <h2 id="habilidades">Lista de habilidades</h2>
     <ul>
         <li class="paciencia"><strong>Paciência</strong></li>
         <li class="dedicacao">Dedicação</li>
         <li class="perseveranca">Perseverança</li>
     </ul>
-    <a href="#foto">Minha foto</a><br>
-    <a id="artigo" href="https://www.oficinadanet.com.br/post/13484-qual-a-melhor-linguagem-de-programacao"
-        target="_blank">Artigo programação</a>
+
 </body>
 
 </html>
